# ebay-watchlist

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: image-quality-findings.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: main.tsx
frontend/src/app/: App.test.tsx  App.tsx  routes.test.ts  routes.ts
frontend/src/styles/: global.css
frontend/src/theme/: ThemeProvider.test.tsx  ThemeProvider.tsx  theme-boot.test.ts  theme-boot.ts  theme-preference.test.ts  theme-preference.ts  useTheme.ts
frontend/tests/: homepage-smoke.spec.ts
src/ebay_watchlist/: settings.py
src/ebay_watchlist/cli/: main.py  (+2 more)
tests/: conftest.py  test_settings.py  test_smoke_cli.py  test_smoke_web.py
tests/cli/: test_cleanup_command.py  test_display_utils.py  test_main.py  test_management_commands.py  test_run_loop_cleanup.py
tests/db/: test_repositories.py  test_retention.py  test_schema_compatibility.py
tests/docs/: test_readme_frontend_commands.py
tests/ebay/: test_api_client.py  test_taxonomy_api.py
tests/integration/: test_ci_workflow_auto_tag.py  test_compose_runtime.py
tests/notifications/: test_notification_service.py
tests/web/: test_analytics.py  test_api_item_actions.py  test_api_items.py  test_api_suggestions.py  test_filters.py  test_item_state.py  test_management.py  test_ui_filters.py  test_view_helpers.py  test_views.py
(+56 files in other folders)
